--- a/templates/index.html
+++ b/templates/index.html
@@ -26,8 +26,8 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
             <ul class="nav navbar-nav menu_nav justify-content-center">
-              <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+              <li class="nav-item active"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right navbar-social">
               <li><a href="#"><i class="ti-facebook"></i></a></li>
@@ -68,7 +68,7 @@
                   <img class="card-img rounded-0" src="{{ post.image_url }}" alt="">
                 </div>
                 <div class="blog__slide__content">
-                  <h3><a href="post/{{ post.slug }}">{{ post.title }}</a></h3>
+                  <h3><a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a></h3>
                   <p>{{ post.published_at }}</p>
                 </div>
               </div>
@@ -89,15 +89,15 @@
                 <div class="thumb">
                   <img class="img-fluid" src="{{ post.image_url }}" alt="">
                   <ul class="thumb-info">
-                    <li><a href="#"><i class="ti-user"></i>{{post.author}}</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at}}</a></li>
-                    <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_amount }}</a></li>
+                    <li><a href="{% url 'post_detail' slug=post.slug %}"><i class="ti-user"></i>{{post.author}}</a></li>
+                    <li><a href="{% url 'post_detail' slug=post.slug %}"><i class="ti-notepad"></i>{{ post.published_at}}</a></li>
+                    <li><a href="{% url 'post_detail' slug=post.slug %}"><i class="ti-themify-favicon"></i>{{ post.comments_amount }}</a></li>
                   </ul>
                 </div>
                 <div class="details mt-20">
                   <h3>{{ post.title }}</h3>
                   <p>{{ post.text | truncatewords:50 }}</p>
-                  <a class="button" href="post/{{ post.slug }}">Read More <i class="ti-arrow-right"></i></a>
+                  <a class="button" href="{% url 'post_detail' slug=post.slug %}">Read More <i class="ti-arrow-right"></i></a>
                 </div>
               </div>
             {% endfor %}
