--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+<title>{{ post.title }} - Blog Details</title>
+{% endblock %}
 {% block content %}
   <!--================ Hero sm Banner start =================-->
   <section class="mb-30px">
