--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}
+<title>Sensive Blog - Home</title>
+{% endblock %}
 {% block content %}
   <main class="site-main">
     <!--================Hero Banner start =================-->
