--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block title %}
 <title>{{ post.title }} - Blog Details</title>
 {% endblock %}
@@ -27,7 +28,11 @@
     <div class="row">
       <div class="col-lg-8">
         <div class="main_blog_details">
+          {% if post.image_url %}
           <img class="img-fluid" src="{{ post.image_url }}" alt="post image">
+          {% else %}
+          <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="post image">
+          {% endif %}
           <h4>{{ post.title }}</h4>
           <div class="user_details">
             <div class="mt-sm-0 mt-3">
