--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 {% block title %}
 <title>Sensive Blog - Home</title>
 {% endblock %}
@@ -26,7 +27,11 @@
         <div class="flex-fill" style="margin-right: 30px;">
           <div class="card blog__slide text-center">
             <div class="blog__slide__img">
-              <img class="card-img rounded-0" src="{{ post.image_url }}" alt="post image">
+              {% if post.image_url %}
+                <img class="card-img rounded-0" src="{{ post.image_url }}" alt="post image">
+              {% else %}
+                <img class="card-img rounded-0" src="{% static 'img/banner/blog.png' %}" alt="post image">
+              {% endif %}
             </div>
             <div class="blog__slide__content">
               <h3><a href="{% url 'post_detail' slug=post.slug %}">{{ post.title }}</a></h3>
@@ -48,7 +53,11 @@
           {% for post in fresh_posts %}
           <div class="single-recent-blog-post">
             <div class="thumb">
+              {% if post.image_url %}
               <img class="img-fluid" src="{{ post.image_url }}" alt="post image">
+              {% else %}
+              <img class="img-fluid" src="{% static 'img/banner/blog.png' %}" alt="post image">
+              {% endif %}
               <ul class="thumb-info">
                 <li><a href="{% url 'post_detail' slug=post.slug %}"><i class="ti-user"></i>{{ post.author }}</a></li>
                 <li><a href="{% url 'post_detail' slug=post.slug %}"><i class="ti-notepad"></i>{{ post.published_at }}</a>
