show all the comments

--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -59,7 +59,7 @@
         </div>
         <div class="comments-area">
           <h4>{{ post.comments | length }} Comments</h4>
-          {% for comment in post.comments|slice:":3" %}
+          {% for comment in post.comments %}
           <div class="comment-list">
             <div class="single-comment justify-content-between d-flex">
               <div class="user justify-content-between d-flex">
